k8s/kubernetes.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: twitterclone-frontend
spec:
  selector:
    matchLabels:
      app: twitterclone-frontend
  replicas: 2
  strategy:  
    rollingUpdate:  
      maxSurge: 1  
      maxUnavailable: 1  
  minReadySeconds: 5   
  template:
    metadata:
      labels:
        app: twitterclone-frontend
    spec:
      containers:
        - name: twitterclone-frontend
          image: stijnboss12/twitterclone.frontend:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
              protocol: TCP          
---
apiVersion: v1
kind: Service
metadata:
  name: twitterclone-frontend
spec:
  type: NodePort
  ports:
  - port: 80
    nodePort: 30666
  selector:
    app: twitterclone-frontend
